# SCAR

./: .gitignore  CITATION.cff  README.md  pyproject.toml
config/: camera_matrix_guess_kalibr.json  camera_matrix_guess_naive.json  data_collection.json  data_collection_vl.json  extrinsics_guess_kalibr.json  extrinsics_guess_naive.json  least_squares_extrinsics.json  optimization_calibration.json  optimization_camera_pose_rotation.json  optimization_camera_pose_translation.json  optimization_full.json  optimization_landmark.json  reprojection_colmap.json  reprojection_kalibr.json  reprojection_naive.json  reprojection_scar_both.json  reprojection_scar_cam_only.json  reprojection_scar_extrinsics_only.json  reprojection_vins.json  visloc_kalibr.json  visloc_scar_both.json  world_point_noise.json
config/2022-02-23-11-45-35/: data_collection_test.json  data_collection_train.json  data_collection_vl.json  least_squares_extrinsics.json  optimization_camera_pose_rotation.json  optimization_landmark.json  reprojection_gcp_scar_both.json  reprojection_test_colmap.json  reprojection_test_kalibr.json  reprojection_test_scar_both.json  reprojection_test_scar_cam_only.json  reprojection_test_scar_extrinsics_only.json  (+10 more)
env/: INFO.md  environment.yml  environment_min.yml
scar/: __init__.py  geometry.py  metrics.py  satellite.py  sequence.py  transform.py  utilities.py  visualization.py
scripts/: collect_data.py  estimate_world_point_noise.py  evaluate_pnp_vl.py  evaluate_reprojection.py  extrinsics_from_ls.py  sfm_optimization.py
tests/: test_satellite.py  test_transform.py
(+116 files in other folders)
